--- a/docs/templates/theme-tags/single.html
+++ b/docs/templates/theme-tags/single.html
@@ -8,13 +8,9 @@
 {% block content %}
     <div class="themes-container">
         {% block theme_content %}
-            <h1>Zola themes</h1>
-            {% set tax = get_taxonomy(kind = "theme-tags") %}
-            {% if tax and tax.items | length > 0 %}
-              <p><a href="{{ get_url(path = "theme-tags") }}">Search by tags</a></p>
-            {% endif %}
+            <h1>Zola themes in {{ term.name }}</h1>
             <div class="themes">
-                {% for theme in section.pages %}
+                {% for theme in term.pages %}
                     <a class="theme" href="{{theme.permalink}}">
                         <img src="{{theme.permalink}}screenshot.png" alt="Screenshot of {{theme.title}}">
                         <span>{{theme.title}}</span>
