--- a/docs/templates/theme.html
+++ b/docs/templates/theme.html
@@ -13,6 +13,16 @@
             {% if page.extra.demo %}
               <p><b>Live Demo:</b> <a href="{{page.extra.demo}}">{{page.extra.demo}}</a></p>
             {% endif %}
+            {% if page.taxonomies["theme-tags"] %}
+              <div>
+              <p>Tags:</p>
+              <ul style="list-style-type: none;">
+              {% for t in page.taxonomies["theme-tags"] %}
+                {% set term = get_taxonomy_term(kind="theme-tags", term = t) %}
+                <li><a href="{{ term.permalink }}">{{ term.name }}</a></li>
+                {% endfor %}
+              </div>
+            {% endif %}
             <p><b>Last updated:</b> {{page.extra.updated }}</p>
         </div>
     </div>
